# simpulacrum

./: .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_MANUAL.md  Azure Progress.txt  CLAUDE.md  CONTRIBUTING.md  MODIFIED_FILES.txt  Makefile  README.md  cookies.txt  hosting instructions.txt  policyratesTODO.txt  update_table_views.txt
backend/: .coveragerc  .dockerignore  .env.example  .flake8  Dockerfile  MIGRATION_GUIDE.md  README.md  generate_and_test_password.py  newfxrates.txt  organisation_json_additions.txt  pyproject.toml  pytest.ini  requirements-app.txt  requirements.txt  reset_password.py  run.py  startup.py  test_password.py  turkey_page_debug.html  uk_page_debug.html  verify_in_container.py  vietnam_page_debug.html
backend/data/csv/: Country_Data.csv  bcp_coords.csv  cpmm_road_mapping.csv  cpmm_road_summary.csv  cpmm_road_tidy.csv  weo_gdp_growth_2021_2027.csv
backend/data/excel/: CPMM_BCP_Indicators.xlsx  Institutions.xlsx  Middle_Corridor_Routes.xlsx  PDF.xlsx
backend/data/json/: agent_contacts_backup_20251105_134302.json  agents.json  audit_log.json  capital_partners_backup_20251105_134302.json  contacts_backup_20251105_134532.json  corporates_backup_20251105_134302.json  counsel_contacts_backup_20251105_134532.json  countries_master.json  deal_participants.json  deals.json  fx_rates.json  fx_rates_history.json  investment_profiles.json  investment_strategies.json  investment_strategies.json.old  legal_advisors_backup_20251105_134302.json  organizations.json  organizations_backup_20251111_100326.json  pipeline_strategies.json  playbook_calendar.json  playbook_contacts.json  playbook_contacts_backup_20251108_210727.json  playbook_deals.json  playbook_filing_backup_20251108_210731.json  playbook_people.json  playbook_people_backup_20251108_210731.json  playbook_workstreams.json  playbook_workstreams.json.backup_20251110_123032  playbook_workstreams_backup_20251108_210731.json  shared_announcement.json  sponsor_contacts.json  super_admin_notes.json  unified_contacts.json  users.json  weekly_whiteboards.json
backend/migrations/: README.md  consolidate_organizations.py  merge_investment_fields.py  migrate_countries_to_array.py  remove_country_yn_fields.py
backend/migrations/requirements/: base.txt  dev.txt  prod.txt
backend/requirements/: base.txt  test.txt
backend/scripts/: README_TURKEY_YIELD_CURVE.md  fetch_turkey_yield_curve.py  fetch_uk_yield_curve.py  fetch_vietnam_yield_curve.py
backend/src/: app.py  config.py
backend/src/api/: admin.py  agents.py  auth.py  capital_partners.py  counsel.py  countries.py  countries_master.py  data.py  deal_participants.py  deals.py  excel.py  fx_rates.py  investment.py  pipeline.py  playbook.py  profile.py  reports.py  sponsors.py  users.py  whiteboard.py
backend/tests/: conftest.py
(+409 files in other folders)
